static/css/base.css
html {
    height: 100%;
}

body {
    background: url('/media/hero_image.jpg') no-repeat center center fixed;
    background-size: cover;
    height: calc(100vh - 60px);
    color: white;
    font-family: 'Lato';
}

/* From Bulma as in CI video, Boutique Ado */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}

.nav-link-black,  
#topnav { 
    background: #000;
}

.navbar-toggler,
.navbar-toggler-icon {
    background: #fff;
}

#discount-banner {
    background: rgb(242, 214, 57);
    color: #000;
    font-family: 'Comforter+Brush' !important;
}

.logo-font {
    font-family: 'Comforter+Brush' !important;
    color: #fff;
}

.logo-font:hover {
    color: rgb(242, 214, 57);
}

.main-logo-link {
    width: fit-content;
}

/* Change color to white where now black etc and correct colors when background is black. Delete this comment then. */
.shop-now-button {
    background: white;
    color: black;
    min-width: 260px;
}

.btn-dark {
    background: white;
    color: black;
}

/* Change color to white and correct colors when background is black. Delete this comment then. */
.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.nav-buttons:hover,
.nav-buttons:active,
.nav-buttons:focus,
.btn-dark:hover,
.btn-dark:active,
.btn-dark:focus {
    background: rgb(242, 214, 57);
    color: black;
}

/* change to text-white when background is set to black, and change color to white. Delete this comment then. */
.text-white {
    color: #fff !important;
}

/* change to border-white when background is set to black, and change color to white. Delete this comment then. */
.border-white {
    border: 1px solid white !important;
}

.nav-link-hover:hover {
    background: rgb(242, 214, 57);
    color: black;
}

.gallery {
    clear: both;
    line-height: 0;
    column-count: 2;
    column-gap: 0;
}

.gallery img {
    width: 100%;
}

.overlay {
    height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

/* -------------------------------- Footer */

footer {
    background: #000;
}

.footer-button:hover,
.sign-up-footer:hover {
    color: rgb(242, 214, 57);
}

.sign-up-footer {
    color: rgb(242, 214, 57);
}

.footer-button {
    color: #fff;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
      max-width: 80%;
    }
  }

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
}

